--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="ACSII" />
-        <title>Run Buddy</title>
+        <title>Run Buddy!</title>
     </head>
     <body>
         <header>
