--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="ACSII" />
+        <meta charset="UTF-8" />
         <title>Run Buddy!</title>
     </head>
     <body>
         <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+            </h1>
+        <nav>
+
+        <ul>
+            
+            <li>
+                <a href="#what-we-do">What WE Do</a>
+            </li>
+            <li>
+                <a href="#what-you-do">What You Do</a>
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach out">Reach Out</a>
+            </li>
+        </ul>
+        </nav>
         </header>
+    
 
     <!-- hero/jumbotron -->
     <section>
 
     </section>
-    <!--"what we co" section-->
+    <!--"what we do" section-->
     <section>
         <h2>What We Do</h2>
     </section>
