--- a/index.html
+++ b/index.html
@@ -31,23 +31,26 @@
         </header>
     
 
-    <!-- hero/jumbotron -->
-    <section>
-        <div>
+    <!-- hero section -->
+    <section class="hero">
+        <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
             <!--Form Element-->
             <form>
                 <label for="name">Enter Full Name</label>
-                <input type="text" placeholder="Your Name" name="name" id="name "/>
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
+
                 <label for="email">Enter email address:</label>
-                <input type="email" placeholder="Email Address" name="email" id="email"/>
+                <input type="text" placeholder="Email Address" name="email" id="email" class="form-input" />
+
                 <label for="phome">Enter a telephone number:</label>
-                <input for="tel" placeholder="Phone Number" name="phone" id="phone"/>
+                <input for="text" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
                 <p>
                     Have you worked with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes"/>
                     <label for="trainer-yes">Yes</label>
+
                     <input type="radio" name="trainer-confirm" id="trainer-no"/>
                     <label for="trainer-no"></label>
                 </p>
@@ -66,13 +69,38 @@
     <!--End of hero section-->
 
     <!--"what we do" section-->
-    <section>
+    <section id="what-we-do">
         <h2>What We Do</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, saepe. Sit iure nulla quod provident iste animi ratione earum perspiciatis, itaque, eveniet laudantium ea nesciunt reiciendis labore aut illo natus.</p>
     </section>
 
     <!--"what you do"-->
-    <section>
+    <section id="what-you-do">
         <h2>What You Do</h2>
+        <div>
+            <img src="./assets/images/image1.svg" alt=""/>
+            <h3>Step 1: Fill Out the Form Above.</h3>
+            <p>You're probably here, so why not?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/image2.svg" alt="" />
+            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/image3.svg" alt="" />
+            <h3>Step 3: Get Running.</h3>
+            <P>Hit the ground running (literally) once your trainer lays out your plan.</P>
+        </div>
+
+        <div>
+            <img src="./assets/images/image4.svg" alt="" />
+            <h3>Step 4: See Results.</h3>
+            <p>Bi-weekly check-ins with your trainer will keep you focused</p>
+        </div>
+        
     </section>
 
     <!--"meet the trainers" section-->
