--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!--End of hero section-->
 
     <!--"what we do" section-->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, saepe. Sit iure nulla quod provident iste animi ratione earum perspiciatis, itaque, eveniet laudantium ea nesciunt reiciendis labore aut illo natus.</p>
     </section>
