--- a/index.html
+++ b/index.html
@@ -70,34 +70,34 @@
 
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
-        <h2>What We Do</h2>
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, saepe. Sit iure nulla quod provident iste animi ratione earum perspiciatis, itaque, eveniet laudantium ea nesciunt reiciendis labore aut illo natus.</p>
     </section>
 
     <!--"what you do"-->
-    <section id="what-you-do">
-        <h2>What You Do</h2>
+    <section id="what-you-do" class="steps">
+        <h2 class="section-title primary-border">What You Do</h2>
         <div>
             <img src="./assets/images/image1.svg" alt=""/>
-            <h3>Step 1: Fill Out the Form Above.</h3>
+            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're probably here, so why not?</p>
         </div>
 
         <div>
             <img src="./assets/images/image2.svg" alt="" />
-            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
             <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
 
         <div>
             <img src="./assets/images/image3.svg" alt="" />
-            <h3>Step 3: Get Running.</h3>
+            <h3>Step 3: <span>Get Running.</span></h3>
             <P>Hit the ground running (literally) once your trainer lays out your plan.</P>
         </div>
 
         <div>
             <img src="./assets/images/image4.svg" alt="" />
-            <h3>Step 4: See Results.</h3>
+            <h3>Step 4: <span>See Results.</span></h3>
             <p>Bi-weekly check-ins with your trainer will keep you focused</p>
         </div>
         
