--- a/index.html
+++ b/index.html
@@ -104,9 +104,38 @@
     </section>
 
     <!--"meet the trainers" section-->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <!--first trainer-->
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+        <article class="trainer">
+            <img src="assets/images/trainer1.jpeg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainers-bio text-left">
+                <h3>Aaron Stephens</h3>
+                <h4>Speed/Strength</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum assumenda distinctio est molestias beatae eligendi placeat iure impedit veniam ipsum, facere voluptas quae hic asperiores et architecto officiis vel. Natus?</p>
+            </div>
+        </article>
+
+    <!--second trainer-->
+    <article class="trainer">
+        <div class="trainer-bio text-right">
+            <h3>Joanna Gill</h3>
+            <h4>Endurance</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ducimus ad officia. Laudantium ipsa aspernatur reiciendis fugiat facilis quo sit magnam labore, ea minima, aliquam id temporibus illo alias deserunt?</p>
+        </div>
+        <img src="./assets/images/trainer2.jpeg" alt="Joanna Gill cooling off after a workout" />
+    </article>
     </section>
+
+    <!--third trainer-->
+    <article class="trainer">
+        <img src="./assets/images/trainer3.jpeg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+        <div class="trainer-bio text-left">
+            <h3>Harry "the headband" Smith</h3>
+            <h4>Strength</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad impedit culpa illo ex. Molestias inventore perferendis vero optio pariatur nulla quae, distinctio fugit necessitatibus fugiat doloremque praesentium, aut delectus facere.</p>
+        </div>
+    </article>
 
     <!--"reach out" section-->
     <section>
