--- a/index.html
+++ b/index.html
@@ -140,6 +140,23 @@
     <!--"reach out" section-->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.9842715630134!2d-77.02668448418483!3d38.878601679573535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b770c5db0577%3A0x7d13569e785b097b!2sThe%20Wharf%20DC!5e0!3m2!1sen!2sus!4v1621556294413!5m2!1sen!2sus" 
+            width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div>
+            <h3>Run Buddy</h3>
+            <p>Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                District of Columbia, Washinton D.C. <br />
+                12345<br />
+                P: 202.RUN.BUDZ (202.123.4567)<br />
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </section>
 
     <!--footer-->
