--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!--"what you do"-->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title primary-border">What You Do</h2>
+        <h2 class="section-title secondary-border">What You Do</h2> <!--was primary border-->
         <div>
             <img src="./assets/images/image1.svg" alt=""/>
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -163,7 +163,7 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy</h2>
         <div>
-            <a href="./privacy-policy.htmls">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
