--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,14 +9,12 @@
 <body>
     <header>
         <h1>
-            <a href="/">RUN BUDDY</a>
-            </h1>
+            <a href="./index.html">RUN BUDDY</a>
+          </h1>
         <nav>
-
         <ul>
-            
             <li>
-                <a href="./index.html#what-we-do">What WE Do</a>
+                <a href="./index.html#what-we-do">What We Do</a>
             </li>
             <li>
                 <a href="./index.html##what-you-do">What You Do</a>
@@ -463,7 +461,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy</h2>
             <div>
-                <a href="">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a> <br/>
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
