--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="step-info">
                 <div class="step-img">
                     <img src="./assets/images/image1.svg" alt=""/>
-                </div>
+                    </div>
                 <div class="step-text">
                 <h4>Fill Out The Form Above</h4>
                 <p>You're probably here, so why not?</p>
@@ -101,14 +101,14 @@
 
         <div class="step">
             <h3>Step 2:</h3>
-                <div class="step-info">
+            <div class="step-info">
                     <div class="step-img">
-                    <img src="./assets/images/image2.svg" alt="" />
-                    </div>
+                        <img src="./assets/images/image2.svg" alt="" />
+                        </div>
                     <div class="step-text">
-            <h4>Consult with One of Our Trainers</h4>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
-            </div>
+                <h4>Consult with One of Our Trainers</h4>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
             </div>
         </div>
 
@@ -142,39 +142,42 @@
 
     <!--"meet the trainers" section-->
     <!--first trainer-->
-    <section id="your-trainers" class="trainers">
+    <div class="trainers">
+    <section id="your-trainers">
         <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
         </div>
         <article class="trainer">
             <img src="assets/images/trainer1.jpeg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainers-bio text-left">
-                <h3>Aaron Stephens</h3>
-                <h4>Speed/Strength</h4>
+            <div class="trainers-bio">
+                <h3 class="trainer-name">Aaron Stephens</h3>
+                <h4 class="trainer-role">Speed/Strength</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum assumenda distinctio est molestias beatae eligendi placeat iure impedit veniam ipsum, facere voluptas quae hic asperiores et architecto officiis vel. Natus?</p>
             </div>
         </article>
 
     <!--second trainer-->
+    <div>
     <article class="trainer">
-        <div class="trainer-bio text-right">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
+        <img src="./assets/images/trainer2.jpeg" alt="Joanna Gill cooling off after a workout" />
+        <div class="trainer-bio">
+            <h3 class="trainer-bio">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ducimus ad officia. Laudantium ipsa aspernatur reiciendis fugiat facilis quo sit magnam labore, ea minima, aliquam id temporibus illo alias deserunt?</p>
         </div>
-        <img src="./assets/images/trainer2.jpeg" alt="Joanna Gill cooling off after a workout" />
     </article>
-    </section>
 
     <!--third trainer-->
     <article class="trainer">
         <img src="./assets/images/trainer3.jpeg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-        <div class="trainer-bio text-left">
-            <h3>Harry "the headband" Smith</h3>
-            <h4>Strength</h4>
+        <div class="trainer-bio">
+            <h3 class="trainer-bio">Harry "the headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad impedit culpa illo ex. Molestias inventore perferendis vero optio pariatur nulla quae, distinctio fugit necessitatibus fugiat doloremque praesentium, aut delectus facere.</p>
         </div>
     </article>
+    </div>
+    </section>
 
     <!--"reach out" section-->
     <section id="reach-out" class="contact">
