fixed keying errors on trainer-name class'

--- a/index.html
+++ b/index.html
@@ -139,17 +139,19 @@
         </div>
         
     </section>
+    <!--what you do end-->
 
     <!--"meet the trainers" section-->
     <!--first trainer-->
-    <div class="trainers">
     <section id="your-trainers">
         <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
         </div>
+
+        <div class="trainers">
         <article class="trainer">
             <img src="assets/images/trainer1.jpeg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainers-bio">
+            <div class="trainer-bio">
                 <h3 class="trainer-name">Aaron Stephens</h3>
                 <h4 class="trainer-role">Speed/Strength</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum assumenda distinctio est molestias beatae eligendi placeat iure impedit veniam ipsum, facere voluptas quae hic asperiores et architecto officiis vel. Natus?</p>
@@ -160,16 +162,17 @@
     <article class="trainer">
         <img src="./assets/images/trainer2.jpeg" alt="Joanna Gill cooling off after a workout" />
         <div class="trainer-bio">
-            <h3 class="trainer-bio">Joanna Gill</h3>
+            <h3 class="trainer-name">Joanna Gill</h3>
             <h4 class="trainer-role">Endurance</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ducimus ad officia. Laudantium ipsa aspernatur reiciendis fugiat facilis quo sit magnam labore, ea minima, aliquam id temporibus illo alias deserunt?</p>
-    </article>
+            </div>
+        </article>
 
     <!--third trainer-->
     <article class="trainer">
         <img src="./assets/images/trainer3.jpeg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
         <div class="trainer-bio">
-            <h3 class="trainer-bio">Harry "the headband" Smith</h3>
+            <h3 class="trainer-name">Harry "the headband" Smith</h3>
             <h4 class="trainer-role">Strength</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad impedit culpa illo ex. Molestias inventore perferendis vero optio pariatur nulla quae, distinctio fugit necessitatibus fugiat doloremque praesentium, aut delectus facere.</p>
         </div>
