--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <label for="trainer-yes">Yes</label>
 
                     <input type="radio" name="trainer-confirm" id="trainer-no"/>
-                    <label for="trainer-no"></label>
+                    <label for="trainer-no">No</label>
                 </p>
                 <p>
                     <label for="checkbox">
